# XF-Mold-Quality-Agent-main

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
backend/: README.md
backend/docs/: api-reference.md
backend/scripts/: generate_eval_dataset.py  run_retrieval_eval.py
backend/src/: main.py
backend/src/ai/agents/: base_agent.py  quality_agent.py  rag_agent.py  rd_agent.py
backend/src/ai/chat/: history_manager.py  query_pipeline.py  query_rewriter.py  rewrite_trigger.py
backend/src/ai/prompts/: rag_prompt.py
backend/src/ai/router/: domain_router.py
backend/src/ai/tools/: __init__.py  knowledge_search.py
backend/src/core/: config.py  dependencies.py  exceptions.py  llm_client.py  logger.py  middleware.py  vlm_client.py
backend/src/repositories/: chunk_repository.py  conversation_repository.py  document_repository.py
backend/src/services/: chat_service.py  document_service.py  rag_service.py
backend/src/utils/: file.py  markdown.py  text.py
backend/tests/: eval_dataset.json
docker/: api-dev.Dockerfile  api.Dockerfile  nginx.conf  web-dev.Dockerfile  web.Dockerfile
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/apis/: conversation.ts  document.ts  index.ts  rag.ts
frontend/src/router/: index.ts
frontend/src/stores/: chat.ts
frontend/src/views/: ChatPage.vue  Dashboard.vue
(+47 files in other folders)
