[project]
name = "xf-mold-quality-agent"
version = "0.1.0"
description = "XF模具智能体平台 - 基于FMEA与VDA6.4的知识抽取与智能问答系统"
requires-python = ">=3.12"
dependencies = [
    # FastAPI
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Pydantic
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    # Database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.0",
    # Redis
    "redis>=5.2.0",
    # MinIO
    "minio>=7.2.0",
    # LLM & LangChain
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-community>=0.3.0",
    "openai>=1.60.0",
    # RAG
    "chromadb>=0.5.0",
    "rank_bm25>=0.2.2",
    "jieba>=0.42.1",
    # Document parsing
    "python-docx>=1.1.0",
    "python-multipart>=0.0.18",
    "pypdf>=5.1.0",
    # Utils
    "httpx>=0.28.0",
]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
